# notes-kit

./: .gitignore  Cargo.toml  flake.nix
crates/notes-kit-app/: Cargo.toml
crates/notes-kit-app/src/: context.rs  lib.rs
crates/notes-kit-app/src/components/: auth_indicator.rs  header.rs  login_modal.rs  mod.rs  note_list.rs  note_page.rs  note_sidebar.rs  search_modal.rs
crates/notes-kit-app/src/hooks/: mod.rs  use_auth.rs  use_backlinks.rs  use_note.rs  use_search.rs  use_search_modal.rs  use_search_shortcut.rs
crates/notes-kit-app/src/server/: assets.rs  auth.rs  mod.rs  notes.rs
crates/notes-kit-core/: Cargo.toml
crates/notes-kit-core/src/: error.rs  lib.rs
crates/notes-kit-core/src/compute/: backlinks.rs  filter.rs  id_map.rs  links.rs  mod.rs
crates/notes-kit-core/src/models/: asset.rs  auth.rs  mod.rs  note.rs  note_id.rs  search.rs  site.rs
crates/notes-kit-core/src/search/: mod.rs  notes_search.rs
crates/notes-kit-core/src/traits/: auth.rs  format.rs  mod.rs  repository.rs  storage.rs
crates/notes-kit-org/: Cargo.toml
crates/notes-kit-org/src/: date.rs  denote.rs  format.rs  helpers.rs  lib.rs  render_config.rs  renderer.rs  task_helpers.rs  text.rs
crates/notes-kit-server/: Cargo.toml
crates/notes-kit-server/src/: asset_repository.rs  cache.rs  config.rs  lib.rs  repository.rs  serve.rs  state.rs
crates/notes-kit-server/src/auth/: authz_config.rs  axum_backend.rs  mod.rs  sqlite_backend.rs  user_repository.rs
crates/notes-kit-server/src/storage/: local.rs  mod.rs  s3.rs
examples/minimal/: Cargo.toml  auth.toml
examples/minimal/notes/: 00000000T000000==public--index__note.org  20250101T120000--welcome-to-notes-kit__note.org  20250115T090000--getting-started__note.org  20250220T140000==private--secret-thoughts__journal.org  20250220T150000--project-tasks__note.org
examples/minimal/public/: notes-kit.css
examples/minimal/src/: lib.rs  main.rs
public/: notes-kit.css
