[package]
name = "notes-kit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
notes-kit-core = { path = "../notes-kit-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_meta = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
axum-login = "0.18"
argon2 = { version = "0.5", features = ["std"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
futures = "0.3"
async-trait = "0.1"
serde = { workspace = true }
thiserror = "2"
